--- a/index.html
+++ b/index.html
@@ -1,1 +1,60 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My GitHub Portfolio</title>
+</head>
+<body>
 
+    <h1>Your Name</h1>
+    <p>Aspiring Software Developer | Java | Python | Web Development</p>
+
+    <hr>
+
+    <h2>About Me</h2>
+    <p>
+        I am a B.Tech student passionate about software development and building real-world projects.
+        I enjoy learning new technologies and improving my skills.
+    </p>
+
+    <hr>
+
+    <h2>Skills</h2>
+    <ul>
+        <li>Java</li>
+        <li>Python</li>
+        <li>HTML</li>
+        <li>MySQL</li>
+        <li>Git & GitHub</li>
+    </ul>
+
+    <hr>
+
+    <h2>Projects</h2>
+
+    <h3>Student Management System</h3>
+    <p>Add, search, update, and delete student records.</p>
+    <a href="#">View Project</a>
+
+    <h3>AI Proctoring System</h3>
+    <p>Detect cheating in online exams using AI.</p>
+    <a href="#">View Project</a>
+
+    <h3>Portfolio Website</h3>
+    <p>Personal website showcasing skills and projects.</p>
+    <a href="#">View Project</a>
+
+    <hr>
+
+    <h2>Contact</h2>
+    <p>Email: yourmail@gmail.com</p>
+    <p>GitHub: <a href="https://github.com/yourusername">github.com/yourusername</a></p>
+    <p>LinkedIn: <a href="#">Your LinkedIn</a></p>
+
+    <hr>
+
+    <p>© 2026 Your Name</p>
+
+</body>
+</html>
