Update contact information in index.html

--- a/index.html
+++ b/index.html
@@ -48,13 +48,13 @@
     <hr>
 
     <h2>Contact</h2>
-    <p>Email: yourmail@gmail.com</p>
-    <p>GitHub: <a href="https://github.com/yourusername">github.com/yourusername</a></p>
-    <p>LinkedIn: <a href="#">Your LinkedIn</a></p>
+    <p>Email: kategarmounika@gmail.com</p>
+    <p>GitHub: <a href="https://github.com/kategarmounika">github.com/yourusername</a></p>
+    <p>LinkedIn: <a href="#">www.linkedin.com/in/mounika-kategar-97609b354</a></p>
 
     <hr>
 
-    <p>© 2026 Your Name</p>
+    <p>© Kategar mounika</p>
 <link rel="stylesheet" href="style.css">
 </body>
 </html>
