--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-    <h1>Your Name</h1>
+    <h1>Kategar mounika</h1>
     <p>Aspiring Software Developer | Java | Python | Web Development</p>
 
     <hr>
@@ -46,8 +46,18 @@
     <a href="#">View Project</a>
 
     <hr>
+<hr>
 
-    <h2>Contact</h2>
+<h2>https://drive.google.com/file/d/1V4w8MAqOVxxECRJ4UzU4VYKCpanGtIqk/view?usp=sharing</h2> 
+
+<p>You can download my resume by clicking the button below:</p>
+
+<a href="resume.pdf" download>
+    <button>Download My Resume</button>
+</a>
+
+<hr> 
+    <h2>7569751710</h2>
     <p>Email: kategarmounika@gmail.com</p>
     <p>GitHub: <a href="https://github.com/kategarmounika">github.com/yourusername</a></p>
     <p>LinkedIn: <a href="#">www.linkedin.com/in/mounika-kategar-97609b354</a></p>
