--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
 
     <h2>About Me</h2>
     <p>
-        I am a B.Tech student passionate about software development and building real-world projects.
-        I enjoy learning new technologies and improving my skills.
+        I am a dedicated B.Tech Computer Science student with a strong passion for software development and technology. I have practical knowledge of programming languages such as Java and Python, along with web technologies like HTML and basic database management using MySQL. I enjoy building real-world projects that help me improve my problem-solving and analytical skills. I am a quick learner, adaptable, and always eager to explore new tools and technologies. With good communication and teamwork skills, I aim to start my career in a dynamic organization where I can contribute my knowledge, continue learning, and grow as a professional software developer.
     </p>
 
     <hr>
