Add meta description to index.html

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My GitHub Portfolio</title>
+    <meta name="description" content="Kategar Mounika Portfolio - B.Tech Computer Science student skilled in Java, Python, Web Development and software projects.">
 </head>
 <body>
 
