--- a/index.html
+++ b/index.html
@@ -48,18 +48,14 @@
     <hr>
 <hr>
 
-<h2>https://drive.google.com/file/d/1V4w8MAqOVxxECRJ4UzU4VYKCpanGtIqk/view?usp=sharing</h2> 
+<h2>Resume</h2>
+<a href="https://drive.google.com/file/d/1V4w8MAqOVxxECRJ4UzU4VYKCpanGtIqk/view" target="_blank">View My Resume</a>
 
-<p>You can download my resume by clicking the button below:</p>
-
-<a href="resume.pdf" download>
-    <button>Download My Resume</button>
-</a>
-
-<hr> 
-    <h2>7569751710</h2>
+    <hr> 
+    <h2>Contact</h2>
+    <p>Phone: 7569751710</p>
     <p>Email: kategarmounika@gmail.com</p>
-    <p>GitHub: <a href="https://github.com/kategarmounika">github.com/yourusername</a></p>
+    <p>GitHub: <a href="github.com/kategarmounika">github.com/yourusername</a></p>
     <p>LinkedIn: <a href="#">www.linkedin.com/in/mounika-kategar-97609b354</a></p>
 
     <hr>
