Update portfolio details and formatting in index.html

--- a/index.html
+++ b/index.html
@@ -3,19 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My GitHub Portfolio</title>
+    <title>Kategar Mounika Portfolio</title>
     <meta name="description" content="Kategar Mounika Portfolio - B.Tech Computer Science student skilled in Java, Python, Web Development and software projects.">
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
 
-    <h1>Kategar mounika</h1>
+    <h1>Kategar Mounika</h1>
     <p>Aspiring Software Developer | Java | Python | Web Development</p>
 
     <hr>
 
     <h2>About Me</h2>
     <p>
-        I am a dedicated B.Tech Computer Science student with a strong passion for software development and technology. I have practical knowledge of programming languages such as Java and Python, along with web technologies like HTML and basic database management using MySQL. I enjoy building real-world projects that help me improve my problem-solving and analytical skills. I am a quick learner, adaptable, and always eager to explore new tools and technologies. With good communication and teamwork skills, I aim to start my career in a dynamic organization where I can contribute my knowledge, continue learning, and grow as a professional software developer.
+        I am a dedicated B.Tech Computer Science student with a strong passion for software development and technology. 
+        I have practical knowledge of programming languages such as Java and Python, along with web technologies like 
+        HTML and basic database management using MySQL. I enjoy building real-world projects that help me improve my 
+        problem-solving and analytical skills. I am a quick learner, adaptable, and always eager to explore new tools 
+        and technologies. With good communication and teamwork skills, I aim to start my career in a dynamic organization 
+        where I can contribute my knowledge, continue learning, and grow as a professional software developer.
     </p>
 
     <hr>
@@ -46,21 +53,27 @@
     <a href="#">View Project</a>
 
     <hr>
-<hr>
 
-<h2>Resume</h2>
-<a href="https://drive.google.com/file/d/1V4w8MAqOVxxECRJ4UzU4VYKCpanGtIqk/view" target="_blank">View My Resume</a>
-
-    <hr> 
-    <h2>Contact</h2>
-    <p>Phone: 7569751710</p>
-    <p>Email: kategarmounika@gmail.com</p>
-    <p>GitHub: <a href="github.com/kategarmounika">github.com/yourusername</a></p>
-    <p>LinkedIn: <a href="#">www.linkedin.com/in/mounika-kategar-97609b354</a></p>
+    <h2>Resume</h2>
+    <p>
+        <a href="https://drive.google.com/file/d/1V4w8MAqOVxxECRJ4UzU4VYKCpanGtIqk/view" target="_blank">
+            View My Resume
+        </a>
+    </p>
 
     <hr>
 
-    <p>© Kategar mounika</p>
-<link rel="stylesheet" href="style.css">
+    <h2>Contact</h2>
+    <p>Phone: 7569751710</p>
+    <p>Email: <a href="mailto:kategarmounika@gmail.com">kategarmounika@gmail.com</a></p>
+    <p>GitHub: <a href="https://github.com/kategarmounika" target="_blank">github.com/kategarmounika</a></p>
+    <p>LinkedIn: <a href="https://www.linkedin.com/in/mounika-kategar-97609b354" target="_blank">LinkedIn Profile</a></p>
+
+    <hr>
+
+    <footer>
+        <p>© 2026 Kategar Mounika | All Rights Reserved</p>
+    </footer>
+
 </body>
 </html>
