Add education section to index.html

--- a/index.html
+++ b/index.html
@@ -26,7 +26,12 @@
     </p>
 
     <hr>
+    <hr>
 
+    <h2>Education</h2>
+    <p><strong>B.Tech in Computer Science Engineering</strong></p>
+    <p>DRK Institute of Science and Technology, Hyderabad</p>
+    <p>Expected Graduation: 2026</p>
     <h2>Skills</h2>
     <ul>
         <li>Java</li>
