--- a/index.html
+++ b/index.html
@@ -26,7 +26,11 @@
     </p>
 
     <hr>
-    
+    <h2>Career Objective</h2>
+    <p>
+        To obtain a challenging role in software development where I can apply my skills,
+        learn new technologies, and contribute to organizational success.
+    </p>
     <hr>
 
     <h2>Education</h2>
