--- a/index.html
+++ b/index.html
@@ -14,8 +14,15 @@
     <p>Aspiring Software Developer | Java | Python | Web Development</p>
 
     <hr>
+    <h2>Career Summary</h2>
+    <p>
+    Passionate Computer Science student with interest in software development and problem solving.
+    Skilled in Java, Python, and web technologies. Looking for an opportunity to learn and grow
+    as a software developer.
+    </p>
 
-    <h2>About Me</h2>
+    <hr>
+    <h2>About Me</h2> 
     <p>
         I am a dedicated B.Tech Computer Science student with a strong passion for software development and technology. 
         I have practical knowledge of programming languages such as Java and Python, along with web technologies like 
