--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kategar Mounika Portfolio</title>
+    <title>Kategar Mounika | Software Developer Portfolio</title>
     <meta name="description" content="Kategar Mounika Portfolio - B.Tech Computer Science student skilled in Java, Python, Web Development and software projects.">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -43,7 +43,7 @@
     <hr>
 
     <h2>Education</h2>
-    <p><strong>B.Tech in Computer Science Engineering</strong></p>
+    <p><strong>B.Tech in Computer Science Engineering (AI & ML)</strong></p>
     <p>DRK Institute of Science and Technology, Hyderabad</p>
     <p>Expected Graduation: 2026</p>
 
@@ -75,7 +75,14 @@
     <a href="#">View Project</a>
 
     <hr>
+    <hr>
 
+    <h2>Languages Known</h2>
+    <ul>
+    <li>English</li>
+    <li>Telugu</li>
+    <li>Hindi</li>
+    </ul>
     <h2>Resume</h2>
     <p>
         <a href="https://drive.google.com/file/d/1V4w8MAqOVxxECRJ4UzU4VYKCpanGtIqk/view" target="_blank">
