--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
     <h3>Student Management System</h3>
     <p>Add, search, update, and delete student records.</p>
-    <a href="#">View Project</a>
+    <a href="#" target="_blank">View Project</a>
 
     <h3>AI Proctoring System</h3>
     <p>Detect cheating in online exams using AI.</p>
@@ -75,7 +75,6 @@
     <a href="#">View Project</a>
 
     <hr>
-    <hr>
 
     <h2>Languages Known</h2>
     <ul>
@@ -83,6 +82,9 @@
     <li>Telugu</li>
     <li>Hindi</li>
     </ul>
+
+    <hr>
+
     <h2>Resume</h2>
     <p>
         <a href="https://drive.google.com/file/d/1V4w8MAqOVxxECRJ4UzU4VYKCpanGtIqk/view" target="_blank">
